# cc-mirror

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.claude/skills/cc-mirror-dev/: SKILL.md
.claude/skills/cc-mirror-lab/: SKILL.md
docs/: DESIGN.md
src/cc_mirror/: __init__.py  budget.py  cli.py  db.py  l1_parser.py  l2_correction.py  l2_repeated_prompts.py  l2_workflow.py  l3_aggregator.py  l4_renderer.py  llm.py
src/cc_mirror/templates/: report.html.j2  share_card.html.j2
tests/: test_l1_parser.py  test_l2.py  test_l2_workflow.py  test_l3.py  test_l4.py
