[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-mirror"
version = "0.1.1"
description = "从你的 Claude Code 历史中提取可自动化的模式"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Nature"},
]
keywords = ["claude", "claude-code", "ai", "analytics", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "click>=8.0",
  "jinja2>=3.0",
]

[project.optional-dependencies]
# fallback：没有 claude CLI 时用 anthropic SDK
api = [
  "anthropic>=0.40",
]
# PNG 截图（可选，需要额外安装 playwright 浏览器）
screenshot = [
  "playwright>=1.40",
]
# 开发依赖
dev = [
  "pytest>=7.0",
  "pytest-cov",
]

[project.scripts]
cc-mirror = "cc_mirror.cli:main"

[project.urls]
Homepage = "https://github.com/NatureBlueee/cc-mirror"
Repository = "https://github.com/NatureBlueee/cc-mirror"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cc_mirror = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
